0201 Base에 근태기능 추가.

--- a/groupware/WebContent/WEB-INF/commandHandlerURI.properties
+++ b/groupware/WebContent/WEB-INF/commandHandlerURI.properties
@@ -5,6 +5,9 @@
 #.2 Chat
 
 #.3 WorkHistory
+/work.do=work.command.WorkHandler
+/workIn.do=work.command.WorkInHandler
+/workOut.do=work.command.WorkOutHandler
 
 #.4 E_Appoval
 #/document/writeDocument.do=document.command.WriteDocumentHandler
